--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -1,6 +1,7 @@
 name: Agroal CI
 on:
   push:
+   branches: '**'
   pull_request:
   schedule:
     - cron: '0 5 * * 0'  # at 05:00 on Sunday
@@ -10,15 +11,15 @@ jobs:
     name: Java 17 - Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           cache: 'maven'
           distribution: 'temurin'
           java-package: jdk
           java-version: '17'
       - run: mvn -B install
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: agroal-repository-artifact
           path: ~/.m2/repository/io/agroal/**
@@ -32,14 +33,14 @@ jobs:
         java: [ 17, 11 ]
     name: Java ${{ matrix.java }} - Test
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           cache: 'maven'
           distribution: 'temurin'
           java-package: jdk
           java-version: ${{ matrix.java }}
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: agroal-repository-artifact
           path: ~/.m2/repository/io/agroal
@@ -52,8 +53,8 @@ jobs:
     needs: [ build, test ]
     name: Java 17 - Rebuild and Deploy Snapshot Artifacts
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           cache: 'maven'
           distribution: 'temurin'
