--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -48,7 +48,7 @@ jobs:
       - run: rm -fr agroal-test/src/test/java/io/agroal/test/springframework && mvn --projects agroal-test verify -Dversion.org.springframework.boot=2.6.1
 
   deploy:
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.repository == 'agroal/agroal' && github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     needs: [ build, test ]
     name: Java 17 - Rebuild and Deploy Snapshot Artifacts
