AG-218 - Set connection validator from properties file

--- a/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
+++ b/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
@@ -9,6 +9,7 @@ xa=
 minSize=10
 maxSize=100
 initialSize=20
+connectionValidator=io.agroal.test.basic.PropertiesReaderTests$OddHoursConnectionValidator
 acquisitionTimeout_s=1
 validationTimeout_m=1
 leakTimeout_s=10
