--- a/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
+++ b/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
@@ -10,6 +10,7 @@ minSize=10
 maxSize=100
 initialSize=20
 connectionValidator=io.agroal.test.basic.PropertiesReaderTests$OddHoursConnectionValidator
+exceptionSorter=postgres
 acquisitionTimeout_s=1
 validationTimeout_m=1
 leakTimeout_s=10
