AG-223: AutoConfiguration order set for AgroalDataSourcePoolMetricsAutoConfiguration to go after AgroalDataSource bean is to be constructed and after micrometer MeterRegistry bean is to be constructed.

--- a/agroal-spring-boot-starter/pom.xml
+++ b/agroal-spring-boot-starter/pom.xml
@@ -36,12 +36,18 @@
             <artifactId>spring-tx</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Micrometer -->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
             <version>${version.io.micrometer}</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <!-- SLF4J -->
         <dependency>
