--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -30,7 +30,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        java: [ 17, 11 ]
+        java: [ 21, 17, 11 ]
     name: Java ${{ matrix.java }} - Test
     steps:
       - uses: actions/checkout@v4
