--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -26,12 +26,13 @@ jobs:
           retention-days: 1
 
   test:
-    runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
         java: [ 21, 17, 11 ]
-    name: Java ${{ matrix.java }} - Test
+        os: [ ubuntu-latest, windows-latest ]
+    name: Java ${{ matrix.java }} ${{ matrix.os }} - Test
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -45,7 +46,7 @@ jobs:
           name: agroal-repository-artifact
           path: ~/.m2/repository/io/agroal
       # don't run spring tests on JVMs older than 17
-      - run: rm -fr agroal-test/src/test/java/io/agroal/test/springframework && mvn --projects agroal-test verify -Dversion.org.springframework.boot=2.6.1
+      - run: rm -r agroal-test/src/test/java/io/agroal/test/springframework && mvn --projects agroal-test verify -D"version.org.springframework.boot=2.6.1"
 
   deploy:
     if: ${{ github.repository == 'agroal/agroal' && github.ref == 'refs/heads/master' }}
