AG-234: Add getUrl() to io.agroal.springframework.boot.AgroalDataSource to expose the url used in order for spring boot's LiquibaseAutoConfiguration to be able to derive a DataSource from an existing AgroalDataSource.

--- a/agroal-test/pom.xml
+++ b/agroal-test/pom.xml
@@ -180,6 +180,12 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${version.org.liquibase}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>dev.snowdrop</groupId>
             <artifactId>narayana-spring-boot-starter</artifactId>
             <version>${version.dev.snowdrop}</version>
