--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <version.org.jboss.narayana>6.0.0.Final</version.org.jboss.narayana>
         <version.org.junit.jupiter>5.10.0</version.org.junit.jupiter>
         <version.org.junit.platform>1.10.0</version.org.junit.platform>
+        <version.org.liquibase>4.23.0</version.org.liquibase>
         <version.org.ops4j.pax.exam>4.13.5</version.org.ops4j.pax.exam>
         <version.org.ops4j.pax.url>2.6.12</version.org.ops4j.pax.url>
         <version.org.slf4j>2.0.6</version.org.slf4j>
