AG-234: Disable liquibase when defer-datasource-initialization=true

--- a/agroal-test/src/test/resources/SpringBootIntegrationTests/application.properties
+++ b/agroal-test/src/test/resources/SpringBootIntegrationTests/application.properties
@@ -13,4 +13,7 @@ spring.sql.init.data-locations=SpringBootIntegrationTests/init-fruit.sql
 
 spring.jpa.defer-datasource-initialization=true
 
+#Do not use liquibase when defer-datasource-initialization=true
+spring.liquibase.enabled=false
+
 spring.jta.enabled=true
