--- a/agroal-pool/pom.xml
+++ b/agroal-pool/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>2.3-SNAPSHOT</version>
+        <version>2.3</version>
     </parent>
     <artifactId>agroal-pool</artifactId>
     <name>Agroal Connection Pool</name>
