--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2017 Red Hat, Inc. and individual contributors as indicated by the @author tags -->
+<!-- Copyright © 2017 Red Hat, Inc. and individual contributors as indicated by the @author tags -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.agroal</groupId>
     <artifactId>agroal-parent</artifactId>
-    <version>2.5</version>
+    <version>2.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Agroal</name>
     <description>The natural database connection pool</description>
@@ -37,7 +37,7 @@
         <connection>scm:git:git://github.com/agroal/agroal.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/agroal/agroal.git</developerConnection>
         <url>https://github.com/agroal/agroal</url>
-        <tag>2.5</tag>
+        <tag>2.4</tag>
     </scm>
     <developers>
         <developer>
