--- a/agroal-spring-boot-starter/pom.xml
+++ b/agroal-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>2.7.1</version>
+        <version>2.7.2-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-spring-boot-starter</artifactId>
     <name>Agroal Spring Boot Starter</name>
