--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>49</version>
+        <version>50</version>
     </parent>
     <groupId>io.agroal</groupId>
     <artifactId>agroal-parent</artifactId>
@@ -51,30 +51,32 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.release>11</maven.compiler.release>
         <maven.compiler.parameters>true</maven.compiler.parameters>
+        <nexus.repository.release>agroal</nexus.repository.release>
         <!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>" -->
         <!-- In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name -->
         <version.com.github.h-thurow>0.25.0</version.com.github.h-thurow>
         <version.com.h2database>2.3.232</version.com.h2database>
-        <version.com.zaxxer>6.3.0</version.com.zaxxer>
-        <version.dev.snowdrop>3.3.1</version.dev.snowdrop>
-        <version.io.micrometer>1.14.5</version.io.micrometer>
+        <version.com.zaxxer>7.0.1</version.com.zaxxer>
+        <version.dev.snowdrop>3.4.2.2</version.dev.snowdrop>
+        <version.io.micrometer>1.15.3</version.io.micrometer>
         <version.org.apache.felix>7.0.5</version.org.apache.felix>
         <version.org.jboss.jboss-transaction-spi>8.0.0.Final</version.org.jboss.jboss-transaction-spi>
         <version.org.jboss.logging>3.6.1.Final</version.org.jboss.logging>
         <version.org.jboss.narayana>7.1.0.Final</version.org.jboss.narayana>
-        <version.org.junit.jupiter>5.12.1</version.org.junit.jupiter>
-        <version.org.junit.platform>1.12.1</version.org.junit.platform>
-        <version.org.liquibase>4.31.1</version.org.liquibase>
+        <version.org.junit.jupiter>5.13.4</version.org.junit.jupiter>
+        <version.org.junit.platform>1.13.4</version.org.junit.platform>
+        <version.org.liquibase>4.33.0</version.org.liquibase>
         <version.org.ops4j.pax.exam>4.14.0</version.org.ops4j.pax.exam>
-        <version.org.ops4j.pax.url>2.6.16</version.org.ops4j.pax.url>
+        <version.org.ops4j.pax.url>3.0.1</version.org.ops4j.pax.url>
         <version.org.slf4j>2.0.17</version.org.slf4j>
-        <version.org.springframework.boot>3.3.10</version.org.springframework.boot>
+        <version.org.springframework.boot>3.5.4</version.org.springframework.boot>
         <!-- Maven plugins -->
         <version.bundle.plugin>5.1.9</version.bundle.plugin>
+        <version.deploy.plugin>3.2.5</version.deploy.plugin>
         <version.org.apache.servicemix.tooling>1.5.0</version.org.apache.servicemix.tooling>
-        <version.de.thetaphi.forbiddenapis>3.8</version.de.thetaphi.forbiddenapis>
+        <version.de.thetaphi.forbiddenapis>3.9</version.de.thetaphi.forbiddenapis>
         <version.eu.somatik.serviceloader-maven-plugin>1.4.0</version.eu.somatik.serviceloader-maven-plugin>
-        <version.org.apache.maven.plugins.maven-surefire-plugin>3.5.2</version.org.apache.maven.plugins.maven-surefire-plugin>
+        <version.org.apache.maven.plugins.maven-surefire-plugin>3.5.3</version.org.apache.maven.plugins.maven-surefire-plugin>
         <version.org.netbeans.tools.sigtest-maven-plugin>1.6</version.org.netbeans.tools.sigtest-maven-plugin>
     </properties>
     <build>
