--- a/agroal-test/pom.xml
+++ b/agroal-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>2.8-SNAPSHOT</version>
+        <version>2.8</version>
     </parent>
     <artifactId>agroal-test</artifactId>
     <name>Agroal Test Suite</name>
