--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <maven.compiler.release>11</maven.compiler.release>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <nexus.repository.release>agroal</nexus.repository.release>
+        <nexus.staging.tag>agroal-${project.version}</nexus.staging.tag>
         <!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>" -->
         <!-- In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name -->
         <version.com.github.h-thurow>0.25.0</version.com.github.h-thurow>
@@ -72,7 +73,6 @@
         <version.org.springframework.boot>3.5.4</version.org.springframework.boot>
         <!-- Maven plugins -->
         <version.bundle.plugin>5.1.9</version.bundle.plugin>
-        <version.deploy.plugin>3.2.5</version.deploy.plugin>
         <version.org.apache.servicemix.tooling>1.5.0</version.org.apache.servicemix.tooling>
         <version.de.thetaphi.forbiddenapis>3.9</version.de.thetaphi.forbiddenapis>
         <version.eu.somatik.serviceloader-maven-plugin>1.4.0</version.eu.somatik.serviceloader-maven-plugin>
