AG-277 - Fix deployment of snapshot builds

--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -61,13 +61,13 @@ jobs:
           distribution: 'temurin'
           java-package: jdk
           java-version: '17'
-          server-id: jboss-snapshots-repository
+          server-id: jboss
           server-username: MAVEN_CI_USERNAME
           server-password: MAVEN_CI_PASSWORD
       - id: project
         run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> "$GITHUB_ENV"
       - if: endsWith(${{ env.PROJECT_VERSION }}, '-SNAPSHOT')
-        run: mvn -B deploy -P jboss-release
+        run: mvn -B deploy -DaltDeploymentRepository=jboss::https://repository.jboss.org/nexus/repository/snapshots/
         env:
           MAVEN_CI_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_CI_PASSWORD: ${{ secrets.MAVEN_TOKEN }}
