AG-243: Test against real databases (#139)
* AG-243: Test against real databases

Introduces a new `agroal-integration-tests` module starting Databases using TestContainers

* Using testcontainers-junit-jupiter

* Create Datasources utility class

--- a/pom.xml
+++ b/pom.xml
@@ -134,4 +134,18 @@
             </plugin>
         </plugins>
     </build>
+  <profiles>
+    <profile>
+      <id>it</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>!true</value>
+        </property>
+      </activation>
+      <modules>
+        <module>agroal-integration-tests</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
