--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -11,8 +11,8 @@ jobs:
     name: Java 17 - Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-java@v5
         with:
           cache: 'maven'
           distribution: 'temurin'
@@ -29,13 +29,13 @@ jobs:
     needs: build
     strategy:
       matrix:
-        java: [ 21, 17, 11 ]
+        java: [ 25, 21, 17 ]
         os: [ ubuntu-latest, windows-latest ]
     name: Java ${{ matrix.java }} ${{ matrix.os }} - Test
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-java@v5
         with:
           cache: 'maven'
           distribution: 'temurin'
@@ -45,8 +45,7 @@ jobs:
         with:
           name: agroal-repository-artifact
           path: ~/.m2/repository/io/agroal
-      # don't run spring tests on JVMs older than 17
-      - run: rm -r agroal-test/src/test/java/io/agroal/test/springframework && mvn --projects agroal-test verify -D"version.org.springframework.boot=2.6.1"
+      - run: mvn --projects agroal-test verify
 
   deploy:
     if: ${{ github.repository == 'agroal/agroal' && github.ref == 'refs/heads/master' }}
@@ -54,8 +53,8 @@ jobs:
     needs: [ build, test ]
     name: Java 17 - Rebuild and Deploy Snapshot Artifacts
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-java@v5
         with:
           cache: 'maven'
           distribution: 'temurin'
