--- a/agroal-narayana/pom.xml
+++ b/agroal-narayana/pom.xml
@@ -21,4 +21,19 @@
             <version>${version.org.jboss.jboss-transaction-spi}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>io.agroal.narayana</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
