--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.agroal</groupId>
     <artifactId>agroal-parent</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0</version>
     <packaging>pom</packaging>
     <name>Agroal</name>
     <description>The natural database connection pool</description>
@@ -36,7 +36,7 @@
         <connection>scm:git:git://github.com/agroal/agroal.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/agroal/agroal.git</developerConnection>
         <url>https://github.com/agroal/agroal</url>
-        <tag>2.8</tag>
+        <tag>3.0</tag>
     </scm>
     <developers>
         <developer>
