--- a/agroal-narayana/pom.xml
+++ b/agroal-narayana/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>3.0</version>
+        <version>3.1-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-narayana</artifactId>
     <name>Agroal Narayana Integration</name>
